[f/562-i18n] Translations : Pending Connections 2

--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -63,31 +63,25 @@
   "qrcode.text.confirmConnections": "Confirm Connections",
   
 
-  "pendingConnections.text.waitingConfirmation": "Waiting for {{name}} to confirm ...",
-  "pendingConnections.text.zeroPendingConnections": "Waiting for more connections",
-  "pendingConnections.text.pendingConnections": "Waiting for {{name}} to confirm you.",
-  "pendingConnections.text.pendingConnections_plural": "Waiting for {{count}} connections to confirm you.",
-  "pendingConnections.button.returnHome": "Return Home",
-  "pendingConnections.text.errorGeneric": "There was an error, please try connecting with {{name}} again...",
-  "pendingConnections.text.errorMyself": "OOPS!!! This is you...",
-  "pendingConnections.text.errorExpired": "The QRCode used to connect with {{name}} has expired... please try connecting again.",
-  "pendingConnections.text.waiting": "Waiting for data from the profile service",
-  "pendingConnections.text.connectWith": "Connect with?",
   "pendingConnections.tag.newUser": "New User",
   "pendingConnections.tag.alreadyConnected": "(already connected)",
   "pendingConnections.label.connections": "Connections",
   "pendingConnections.label.groups": "Groups",
-  "pendingConnections.label.mutualConnections": "Mutual Connec...",
-  "pendingConnections.button.ignore": "Ignore",
-  "pendingConnections.button.reject": "Reject",
-  "pendingConnections.button.updateProfile": "Update Profile",
-  "pendingConnections.button.confirm": "Confirm",
-  "pendingConnections.alert.title.expired": "Try connecting again...",
-  "pendingConnections.alert.text.expired": "The QRCode used to connect has expired...",
-  "pendingConnections.accessibilityLabel.reject": "reject connection with {{name}}",
-  "pendingConnections.accessibilityLabel.confirm": "accept connection with {{name}}",
+  "pendingConnections.label.mutualConnections": "Mutual Connections",
+  "pendingConnections.title.connectionRequest": "Connection Request",
+  "pendingConnections.title.reconnectWith": "Reconnect with",
+  "pendingConnections.label.rating": "How well do you know this connection?",
+  "pendingConnections.button.suspicious": "Suspicious",
+  "pendingConnections.button.justMet": "Just met",
+  "pendingConnections.button.alreadyKnow": "Already know",
+  "pendingConnections.text.rating": "Your answer will help us prevent attacks",
+  "pendingConnection.text.alreadyRated": "You already rated this connection",
+  "pendingConnection.text.errorConnecting": "Error while connecting. Please try to reconnect.",
+  "pendingConnection.text.errorExpired": "The connection expired. Please try to reconnect.",
+  "pendingConnection.text.errorMyself": "You can not connect to yourself.",
+  "pendingConnection.text.errorUnhandled": "Unhandled connection state",
 
-
+  
   "connections.text.noConnections": "No connections",
   "connections.placeholder.searchConnections": "Search Connections",
   "connections.button.flag": "Flag",
