--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -63,29 +63,23 @@
   "qrcode.text.confirmConnections": "Confirmation des connexions",
 
 
-  "pendingConnections.text.waitingConfirmation": "En attente de confirmation de {{name}}...",
-  "pendingConnections.text.zeroPendingConnections": "En attente de connexions",
-  "pendingConnections.text.pendingConnections": "En attente de confirmation de {{name}}.",
-  "pendingConnections.text.pendingConnections_plural": "En attente de confirmation de {{count}} connexions.",
-  "pendingConnections.button.returnHome": "Retour à l'Accueil",
-  "pendingConnections.text.errorGeneric": "Une erreur est survenue, veuillez essayer à nouveau de vous connecter avec {{name}}...",
-  "pendingConnections.text.errorMyself": "OUPS!!! On dirait que c'est vous...",
-  "pendingConnections.text.errorExpired": "Le code QR utilisé pour vous connecter avec {{name}} a expiré... veuillez réessayer de vous connecter.",
-  "pendingConnections.text.waiting": "En attente de données du service de profiles",
-  "pendingConnections.text.connectWith": "Vous connecter avec ?",
   "pendingConnections.tag.newUser": "Nouvel Utilisateur",
   "pendingConnections.tag.alreadyConnected": "(déjà connecté)",
   "pendingConnections.label.connections": "Connexions",
   "pendingConnections.label.groups": "Groupes",
-  "pendingConnections.label.mutualConnections": "En commun",
-  "pendingConnections.button.ignore": "Ignorer",
-  "pendingConnections.button.reject": "Refuser",
-  "pendingConnections.button.updateProfile": "Mettre à jour",
-  "pendingConnections.button.confirm": "Confirmer",
-  "pendingConnections.alert.title.expired": "Réessayez de vous connecter...",
-  "pendingConnections.alert.text.expired": "Le code QR utilisé pour vous connecter a expiré...",
-  "pendingConnections.accessibilityLabel.reject": "refuser la connexion avec {{name}}",
-  "pendingConnections.accessibilityLabel.confirm": "accepter la connexion avec {{name}}",
+  "pendingConnections.label.mutualConnections": "En Commun",
+  "pendingConnections.title.connectionRequest": "Demande de Connexion",
+  "pendingConnections.title.reconnectWith": "Se reconnecter avec",
+  "pendingConnections.label.rating": "Connaissez-vous cette personne ?",
+  "pendingConnections.button.suspicious": "Suspect(e)",
+  "pendingConnections.button.justMet": "Juste rencontré(e)",
+  "pendingConnections.button.alreadyKnow": "Connaissance",
+  "pendingConnections.text.rating": "Votre réponse nous aide à prévenir les fraudes.",
+  "pendingConnection.text.alreadyRated": "Vous avez déjà évalué cette connexion.",
+  "pendingConnection.text.errorConnecting": "Une erreur est survenue. Veuillez essayer à nouveau de vous connecter.",
+  "pendingConnection.text.errorExpired": "La connexion a expiré. Veuillez essayer à nouveau de vous connecter.",
+  "pendingConnection.text.errorMyself": "Vous ne pouvez pas vous connecter à vous-même.",
+  "pendingConnection.text.errorUnhandled": "État de connexion non supporté.",
 
 
   "connections.text.noConnections": "Aucune connexion",
