--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -11,13 +11,13 @@
   "home.chatActionSheet.title": "Like to chat with us?",
   "home.chatActionSheet.discord": "BrightID Discord",
   "home.accessibilityLabel.connect": "connect",
-  
+
 
   "onboarding.text.intro": "<text>BrightID uses the people you know</text><text>to enforce one-account-per-person</text><text>for important applications like</text><text>voting and universal basic income.</text>",
   "onboarding.label.maintainPrivacy": "Maintain Privacy",
   "onboarding.text.privacy": "<text>Prove you're a unique person</text><text>while preserving your privacy.</text>",
   "onboarding.button.getStarted": "Get Started",
-  
+
 
   "signup.header.title": "SignUp",
   "signup.button.addPhoto": "Add Photo",
@@ -34,7 +34,7 @@
 
   "recovery.header.title": "Recovery Code",
   "recovery.text.askTrustedConnections": "Ask your trusted connections to scan this code.",
-  
+
 
   "qrcode.header.connections": "{{count}} / 30 Connections",
   "qrcode.text.scanCode": "<text>Hey {{name}}, scan a code and</text><text>make a new connection today</text>",
@@ -56,12 +56,12 @@
   "qrcode.alert.shareLinkGroup": "Share this link",
   "qrcode.alert.connectSingle": "Connect with {{name}} on BrightID: {{link}}",
   "qrcode.alert.connectGroup": "Make a group connection with {{name}} on BrightID: {{link}}",
-  
+
   "qrcode.text.downloadingConnectionData": "Downloading Connection Data",
   "qrcode.text.pendingConnections": "You have {{count}} pending connection",
   "qrcode.text.pendingConnections_plural": "You have {{count}} pending connections",
   "qrcode.text.confirmConnections": "Confirm Connections",
-  
+
 
   "pendingConnections.tag.newUser": "New User",
   "pendingConnections.label.connections": "Connections",
@@ -81,7 +81,7 @@
   "pendingConnection.text.errorMyself": "You can not connect to yourself.",
   "pendingConnection.text.errorUnhandled": "Unhandled connection state",
 
-  
+
   "connections.text.noConnections": "No connections",
   "connections.placeholder.searchConnections": "Search Connections",
   "connections.flagActionSheet.infoFlagImpact": "Note that reporting {{name}} will negatively affect their BrightID verification, and the report might be shown to other users.",
@@ -147,7 +147,7 @@
   "apps.text.pendingLink": "Linking your account in {{context}}\n to your BrightID ...",
   "apps.text.notSponsored": "You're not sponsored.\nPlease find an app below to sponsor you.",
   "apps.tag.hasSponsorships": "Has sponsorships",
-  "apps.tag.notVerifiedForApp": "Non-vérifié pour cette application",
+  "apps.tag.notVerifiedForApp": "Not verified for this app",
   "apps.tag.linked": "Linked",
   "apps.tag.tryAgain": "Try Again",
   "apps.alert.title.invalidContext": "Failed",
