[f/562-i18n] Translations: Change password

--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -236,7 +236,6 @@
   "backup.text.enterPassword": "Enter a password to encrypt your backup data with:",
   "backup.placeholder.confirmPassword": "Confirm Password",
   "backup.button.startBackup": "Start Backup",
-  "backup.text.uploadingData": "Uploading encrypted data to backup server ...",
   "backup.alert.text.backupSuccess": "Backup completed successfully!",
   "backup.alert.text.passwordConfirmNoMatch": "Password and confirm password does not match.",
   "backup.alert.text.passwordTooShort": "Your password must be at least 8 characters long.",
@@ -307,12 +306,13 @@
   "profile.text.changeProfilePicture": "Change Profile Picture",
   "profile.text.viewPassword": "View Password",
   "profile.text.changePassword": "Change Password",
-  "profile.button.save": "Save",
-  "profile.button.cancel": "Cancel",
+  "profile.label.currentPassword": "Current password",
+  "profile.label.newPassword": "New password",
+  "profile.label.newPasswordAgain": "New password again",
+  "profile.placeholder.newPassword": "New password",
+  "profile.placeholder.newPasswordAgain": "New password again",
   "profile.button.socialPrevious": "Prev",
   "profile.button.socialNext": "Next",
-  "profile.button.socialSave": "Save",
-  "profile.button.socialCancel": "Cancel",
   "profile.alert.title.discardChanges": "Discard changes?",
   "profile.alert.text.discardChanges": "You have unsaved changes. Are you sure you want to discard them and leave the screen?",
   "profile.alert.button.dontLeave": "Don't leave",
@@ -329,6 +329,8 @@
   "common.alert.yes": "Yes",
   "common.alert.no": "No",
   "common.alert.sure": "Sure",
+  "common.button.save": "Save",
+  "common.button.cancel": "Cancel",
   "common.photoActionSheet.title": "Select photo",
   "common.photoActionSheet.takePhoto": "Take Photo",
   "common.photoActionSheet.choosePhoto": "Choose From Library",
@@ -351,5 +353,6 @@
   "common.language.and": "and",
   "common.placeholder.password": "Password",
   "common.placeholder.searchConnections": "Search Connections",
+  "common.text.uploadingData": "Uploading encrypted data to backup server ...",
   "common.text.progress": "{{completed}}/{{total}} completed"
 }
