--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -236,7 +236,6 @@
   "backup.text.enterPassword": "Entrez un mot de passe avec lequel votre sauvegarde sera chiffrée",
   "backup.placeholder.confirmPassword": "Confirmation de Mot de Passe",
   "backup.button.startBackup": "Commencer la Sauvegarde",
-  "backup.text.uploadingData": "Envoi des données chiffrées vers le serveur de sauvegarde ...",
   "backup.alert.text.backupSuccess": "Sauvegarde effectuée avec succès !",
   "backup.alert.text.passwordConfirmNoMatch": "Le mot de passe et la confirmation de mot de passe ne correspondent pas.",
   "backup.alert.text.passwordTooShort": "Votre mot de passe doit comporter au moins 8 caractères.",
@@ -307,12 +306,13 @@
   "profile.text.changeProfilePicture": "Changer la Photo de Profil",
   "profile.text.viewPassword": "Voir le Mot de Passe",
   "profile.text.changePassword": "Modifier le Mot de Passe",
-  "profile.button.save": "Valider",
-  "profile.button.cancel": "Annuler",
+  "profile.label.currentPassword": "Mot de passe actuel",
+  "profile.label.newPassword": "Nouveau mot de passe",
+  "profile.label.newPasswordAgain": "Répéter le nouveau mot de passe",
+  "profile.placeholder.newPassword": "Nouveau mot de passe",
+  "profile.placeholder.newPasswordAgain": "Nouveau mot de passe",
   "profile.button.socialPrevious": "Retour",
   "profile.button.socialNext": "Suivant",
-  "profile.button.socialSave": "Valider",
-  "profile.button.socialCancel": "Annuler",
   "profile.alert.title.discardChanges": "Annuler les changements ?",
   "profile.alert.text.discardChanges": "Vous avez des changements non sauvegardés. Êtes-vous sûr de vouloir les annuler en quittant l'écran ?",
   "profile.alert.button.dontLeave": "Rester",
@@ -329,6 +329,8 @@
   "common.alert.yes": "Oui",
   "common.alert.no": "Non",
   "common.alert.sure": "Oui",
+  "common.button.save": "Valider",
+  "common.button.cancel": "Annuler",
   "common.photoActionSheet.title": "Sélectionner une photo",
   "common.photoActionSheet.takePhoto": "Prendre une Photo",
   "common.photoActionSheet.choosePhoto": "Sélectionner depuis l'Album",
@@ -351,5 +353,6 @@
   "common.language.and": "et",
   "common.placeholder.password": "Mot de passe",
   "common.placeholder.searchConnections": "Rechercher des Connexions",
+  "common.text.uploadingData": "Envoi des données chiffrées vers le serveur de sauvegarde ...",
   "common.text.progress": "{{completed}}/{{total}} effectué"
 }
