Update and translate achievements
Closes #588

--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -202,6 +202,25 @@
   "profile.button.save": "Save",
   "profile.button.cancel": "Cancel",
 
+  "achievements.progress.title": "Completion:",
+  "achievements.notification.title": "Achievement unlocked!",
+  "achievements.notification.message": "You completed the task \"{{title}}\".",
+  "achievements.make_first_connection.title": "First connection",
+  "achievements.make_first_connection.description": "Connect with another BrightID user",
+  "achievements.make_two_connection.title": "Two connections",
+  "achievements.make_two_connection.description": "Connect with 2 BrightID user",
+  "achievements.make_three_connection.title": "Three connections",
+  "achievements.make_three_connection.description": "Connect with 3 BrightID user",
+  "achievements.join_connection_party.title": "Connection party",
+  "achievements.join_connection_party.description": "Join a BrightID connection party",
+  "achievements.join_connection_party_with_friend.title": "Connection party with friends or family",
+  "achievements.join_connection_party_with_friend.description": "Bring family members or close friends to a BrightID connection party",
+  "achievements.link_app.title": "Link with an app",
+  "achievements.link_app.description": "Link your BrightID with an app",
+  "achievements.get_sponsored.title": "Get sponsored",
+  "achievements.get_sponsored.description": "Get sponsored by linking with an app that offers sponsorship",
+  "achievements.setup_trusted_connections.title": "Setup social recovery",
+  "achievements.setup_trusted_connections.description": "Setup your trusted connections to enable social account recovery",
 
   "common.alert.error": "Error",
   "common.alert.success": "Success",
