--- a/BrightID/translations/german.json
+++ b/BrightID/translations/german.json
@@ -202,6 +202,25 @@
   "profile.button.save": "Speichern",
   "profile.button.cancel": "Abbrechen",
 
+  "achievements.progress.title": "Fortschritt:",
+  "achievements.notification.title": "Ziel erreicht!",
+  "achievements.notification.message": "Du hast das Ziel \"{{title}}\" erreicht.",
+  "achievements.make_first_connection.title": "Erste Verbindung",
+  "achievements.make_first_connection.description": "Verbinde dich mit einem anderen BrightID Nutzer",
+  "achievements.make_two_connection.title": "Zwei Verbindungen",
+  "achievements.make_two_connection.description": "Verbinde dich mit 2 BrightID Nutzern",
+  "achievements.make_three_connection.title": "Drei Verbindungen",
+  "achievements.make_three_connection.description": "Verbinde dich mit 3 BrightID Nutzern",
+  "achievements.join_connection_party.title": "Connection Party",
+  "achievements.join_connection_party.description": "Nimm an einer BrightID Connectionparty teil",
+  "achievements.join_connection_party_with_friend.title": "Connection Party mit Familie oder Freunden",
+  "achievements.join_connection_party_with_friend.description": "Bring Familie und enge Freunde zu einer BrightID Connection Party",
+  "achievements.link_app.title": "Verknüpfe eine App",
+  "achievements.link_app.description": "Verknüpfe Deine BrightID mit einer App",
+  "achievements.get_sponsored.title": "Werde gesponsert",
+  "achievements.get_sponsored.description": "Lass dich sponsern von einer App die Sponsoring anbietet",
+  "achievements.setup_trusted_connections.title": "Soziales Backup",
+  "achievements.setup_trusted_connections.description": "Erstelle vertrauenswürdige Verbindungen und sichere Deine BrightID",
 
   "common.alert.error": "Fehler",
   "common.alert.success": "Erfolg",
