--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -262,7 +262,7 @@
   "restore.title.chooseConnection": "Choissez la Connexion",
   "restore.text.chooseConnectionToHelp": "Veuillez sélectionner dans vos connexions le compte que vous souhaitez aider à restaurer.",
   "restore.text.noConnections": "Aucune connexions...",
-  "restore.alert.text.requestRecovering": "Votre requête pour aider à la restauraton de ce compte a été soumise avec succès !",
+  "restore.alert.text.requestRecovering": "Votre requête pour aider à la restauration de ce compte a été soumise avec succès !",
 
 
   "drawer.label.home": "Accueil",
@@ -304,10 +304,10 @@
   "contact.label.email": "Email",
   "contact.label.website": "Site Web",
   "contact.label.meet": "Rencontrez des Connexions",
-  "contact.text.meet": "Rejoignez des rendez-vous virtuels BrightID!",
+  "contact.text.meet": "Rejoignez des rendez-vous virtuels BrightID !",
   "contact.label.socialMedia": "Réseaux Sociaux",
   "contact.text.weAre": "Nous sommes ",
-  "contact.text.openSource": "open source!",
+  "contact.text.openSource": "open source !",
 
 
   "profile.label.name": "Nom",
@@ -328,7 +328,7 @@
   "profile.alert.button.dontLeave": "Rester",
   "profile.alert.button.discard": "Ne pas enregistrer",
   "profile.alert.title.passwordMatch": "Veuillez réessayer",
-  "profile.alert.text.passwordMatch": "Le mot de passe actuelle ne correspond pas.",
+  "profile.alert.text.passwordMatch": "Le mot de passe actuel est incorrect.",
 
 
   "common.alert.error": "Erreur",
